<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/android:list"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/contact1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/primanyContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/addContactOne"
        android:textColor="#000000" />

    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:background="@android:color/darker_gray"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/contact2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/secondContactBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/addContactTwo"
        android:textColor="#000000" />

    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/noOfMessages"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:layout_marginTop="2dp"
        android:id="@+id/spinnerNoOfMgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/no_of_messages" />

    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/gapTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:layout_marginTop="2dp"
        android:id="@+id/spinnerGapTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gap_time_array"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editMessage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/messgText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center" />
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:background="@android:color/darker_gray"/>
	
</LinearLayout>

</ScrollView>